[gd_scene load_steps=2 format=3 uid="uid://bpi0ewoi4ov5n"]

[ext_resource type="Script" path="res://input_parameter.gd" id="1_1xc53"]

[node name="InputParameter" type="PanelContainer"]
custom_minimum_size = Vector2(200, 50)
offset_right = 8.0
offset_bottom = 36.0
script = ExtResource("1_1xc53")
param_min = 2.0
param_max = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name goes here"

[node name="ComplexitySlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ParamValue" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitsLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "units"

[node name="ComplexityLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Complexity:"

[node name="CompValue" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="VBoxContainer/ComplexitySlider" to="." method="_on_value_changed"]
